<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoachClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_warning">注：如忘记密码请联系所在驾校更改</string>
    <string name="str_coach_login">教练登陆</string>
    <string name="my_order">我的预约</string>
    <string name="hava_order">已经预约</string>
    <string name="practice_finish">训练完成</string>
    <string name="cancel_order">取消预约</string>
    <string name="underLine">按钮下边的下划线</string>
    <string name="myEvaluate">我的评价</string>
    <string name="_all">全部</string>
    <string name="_good">好评</string>
    <string name="_middle">中评</string>
    <string name="_bad">差评</string>
    <string name="my_evaluate">我的评价</string>
    <string name="my_finance">财务信息</string>
    <string name="vip_student">VIP学员</string>
    <string name="my_teach_login">授课记录</string>
    <string name="my_income_login">收入记录</string>
    <string name="my_freeze_login">冻结列表</string>
    <string name="my_turn">我的排班</string>
    
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中...</string>
    <string name="error_view_click_to_refresh">点击屏幕，重新加载</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="tip_load_date_error">对不起，无法加载数据</string>
    
    <string name="loading">加载中...</string>
    <string name="loading_no_more">没有更多.</string>

</resources>
